manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  type: NodePort
  selector:
    app: webserver
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3300
